cluster/apps/media/mylar3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar3
  namespace: media
  labels:
    app: mylar3
spec:
  replicas: 1 # tells deployment to run x pods matching the template
  selector:
    matchLabels:
      app: mylar3
  template:
    metadata:
      labels:
        app: mylar3
    spec:
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-file-pvc
      - name: scripts # name of volume
        configMap:
          name: init-mylar3-cm # name of the ConfigMap you want to mount.
          items: # files to create
          - key: 99-mylar3-init.sh
            path: 99-mylar3-init.sh
      containers:
      - name: mylar3
        image: hotio/mylar3
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", 'cp /scripts/* /etc/cont-init.d/']
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: config-volume
          mountPath: /config
          subPath: configs/mylar3
        - name: scripts
          mountPath: /scripts
        startupProbe:  # broken - fix
          exec:
            command:
              - /bin/sh
              - -c
              - grep 'http_root = /comics' /config/config.ini
          failureThreshold: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /comics
            port: 8090
          initialDelaySeconds: 60
          periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: mylar3
  namespace: media
  labels:
    app: mylar3
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: mylar3
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mylar3-ingress
  namespace: media
spec:
  entryPoints:
  - web
  routes:
    - match: PathPrefix(`/comics`)
      kind: Rule
      services:
        - name: mylar3
          port: 8090
